GNOME Bugzilla – Bug 676032
keyframe-transition: Documentation fixes
Last modified: 2012-05-15 15:43:04 UTC
Update the documentation to use the right symbols
Created attachment 214006 [details] [review] keyframe-transition: Documentation fixes
Review of attachment 214006 [details] [review]: looks good
Attachment 214006 [details] pushed as 8a4489c - keyframe-transition: Documentation fixes