keyframe-transition: Documentation fixes

Update the documentation to use the right symbols

https://bugzilla.gnome.org/show_bug.cgi?id=676032